Add - JWT authentification system for user management
